--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -3,4 +3,5 @@
   height: 100%
   max-height: 428px
   overflow-y: auto
-  overscroll-behavior-y: contain
+  scroll-behavior: smooth
+  background-color: antiquewhite
