#1 Фон для списка сообщений

--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -5,3 +5,10 @@
   overflow-y: auto
   scroll-behavior: smooth
   background-color: antiquewhite
+
+.Curtain
+  position: absolute
+  min-height: 428px
+  width: 100%
+  background-color: antiquewhite
+  z-index: -1
