--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
@@ -4,6 +4,7 @@
   width: 100%
   height: 50px
   border-top: 1px solid black
+  background-color: white
 
 .editor
   width: 95%
@@ -11,10 +12,11 @@
   outline: none
   padding-left: 5px
   padding-top: 2px
+  z-index: 2
 
 .whenEmpty
   position: absolute
   opacity: 0.5
-  z-index: -1
+  z-index: 1
   padding-left: 5px
   padding-top: 2px
