--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -6,7 +6,7 @@
   scroll-behavior: smooth
   background-color: antiquewhite
 
-.Curtain
+.curtain
   position: absolute
   min-height: 428px
   width: 100%
