#CBF-6 стили для чатбота согласно дизайну

--- a/front/ChatBot/src/app/chat-bot-button/chat-bot-button.component.html
+++ b/front/ChatBot/src/app/chat-bot-button/chat-bot-button.component.html
@@ -1,1 +1,5 @@
-<div class="chatbot-button" (click)="clickBtn()">Chat</div>
+<div class="chatbot-button" (click)="clickBtn()">
+  <div style="position: relative">
+    <div class="btn-text">Закрыть</div>
+  </div>
+</div>
