--- a/front/ChatBot/src/app/msg-content/msg-content.component.html
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.html
@@ -1,4 +1,4 @@
-<div class="curtain">d</div>
+<div class="curtain"></div>
 <div class="msg-content" scrollControl>
   <ng-content></ng-content>
 </div>
