--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -4,7 +4,7 @@
   max-height: 428px
   overflow-y: auto
   scroll-behavior: smooth
-  background-color: antiquewhite
+  background-color: #F7F8FA
 
 .curtain
   position: absolute
