--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.html
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.html
@@ -1,12 +1,18 @@
 <div #chatEditor class="chat-editor">
-  <div class="whenEmpty" *ngIf="this.message === ''">Введите сообщение</div>
+<!--  <div class="whenEmpty" *ngIf="this.message === ''" >Введите сообщение</div>-->
   <div
     #editor
-    class="editor"
+    class="editor editableDiv2"
     contenteditable="true"
     (keypress)="enter($event)"
     (input)="onChange($event.target)"
     (keyup.enter)="onKeyupEnter($event)"
     (keydown.enter)="onKeydownEnter($event)"
-  ></div>
+    placeholder="Введите сообщение"
+    [ngClass]="{'placeholder-active': message === ''}"
+  >
+  </div>
+  <div class="btn-send">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="currentColor" d="M1.101 21.757L23.8 12.028 1.101 2.3l.011 7.912 13.623 1.816-13.623 1.817-.011 7.912z"></path></svg>
+  </div>
 </div>
