--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
@@ -3,7 +3,7 @@
   bottom: 0
   width: 100%
   height: 50px
-  border-top: 1px solid black
+  //border-top: 1px solid black
   background-color: white
 
 .editor
@@ -14,9 +14,33 @@
   padding-top: 2px
   z-index: 2
 
+.editableDiv2[contentEditable="true"]:empty:before
+  content: attr(placeholder)
+  cursor: text
+
+.placeholder-active
+  color: gray
+
 .whenEmpty
   position: absolute
   opacity: 0.5
   z-index: 1
   padding-left: 5px
   padding-top: 2px
+  display: inline-block
+  user-select: none
+  visibility: visible
+  cursor: text
+  user-select: none
+
+.btn-send
+  position: absolute
+  width: 40px
+  height: 40px
+  cursor: pointer
+  color: #DADEE5
+  text-align: center
+  padding-top: 10px
+  bottom: 0
+  right: 0
+  //border: 1px solid black
