--- a/front/ChatBot/src/app/msg-container/msg-container.component.sass
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.sass
@@ -1,17 +1,24 @@
 .parent-chatbot
   border: 1px solid black
-  min-width: 400px
-  max-width: 400px
+  min-width: 490px
+  max-width: 490px
   min-height: 500px
   max-height: 500px
   position: fixed
   bottom: -510px
   right: 10px
+  background: #F7F8FA
+  border: 1px solid #D3D6DE
+  box-sizing: border-box
+  box-shadow: 0px 3px 15px rgba(36, 64, 128, 0.2)
+  border-radius: 2px
 
-  .chatbot
-    position: relative
-    min-width: 400px
-    max-width: 400px
-    min-height: 500px
-    max-height: 500px
+.chatbot
+  position: absolute
+  width: 100%
+  height: 100%
 
+.editor-container
+  width: 100%
+  height: 50px
+  display: flex
