CBF-8 заголовок в редакторе чата

--- a/front/ChatBot/src/app/chat-header/chat-header.component.html
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.html
@@ -1,1 +1,7 @@
-<div>chat-header works!</div>
+<div class="chat-header">
+  <div class="company">АО РЭС</div>
+  <div class="operators">
+    Операторы в сети
+    <span class="circle"></span>
+  </div>
+</div>
