--- a/front/ChatBot/src/app/msg-container/msg-container.component.html
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.html
@@ -1,6 +1,6 @@
 <div [@openClose]="opened ? 'open' : 'closed'" class="parent-chatbot">
   <div class="chatbot">
-    <button (click)="onClosed()">Закрыть</button>
+    <chat-header></chat-header>
     <msg-content>
       <p id="msg_{{pId}}" *ngFor="let msg of messages; index as pId" (domChange)="onDomChange($event, msg)"></p>
     </msg-content>
