--- a/front/ChatBot/src/app/chat-bot-button/chat-bot-button.component.sass
+++ b/front/ChatBot/src/app/chat-bot-button/chat-bot-button.component.sass
@@ -26,3 +26,16 @@
   font-weight: bold
   font-size: 13px
   line-height: 18px
+
+.text-open-icon
+  width: 29px
+  position: absolute
+  right: -29px
+  color: #E52D2E
+
+.text-close-icon
+  width: 18px
+  position: absolute
+  right: -21px
+  color: #E52D2E
+  top: 1px
