--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -10,5 +10,5 @@
   position: absolute
   min-height: 428px
   width: 100%
-  background-color: antiquewhite
+  background-color: #F7F8FA
   z-index: -1
