--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
@@ -2,16 +2,19 @@
   position: absolute
   bottom: 0
   width: 100%
-  height: 50px
-  //border-top: 1px solid black
+  min-height: 50px
   background-color: white
+  max-height: 100px
+  overflow-y: auto
 
 .editor
-  width: 95%
   height: 100%
+  max-height: 100px
   outline: none
-  padding-left: 5px
-  padding-top: 2px
+  padding:
+    left: 5px
+    top: 2px
+    right: 40px
   z-index: 2
 
 .editableDiv2[contentEditable="true"]:empty:before
