--- a/front/ChatBot/src/app/client-message/client-message.component.html
+++ b/front/ChatBot/src/app/client-message/client-message.component.html
@@ -1,5 +1,20 @@
-<div class="client-message">&nbsp;
-  <div #msg class="msg-right">
+<div class="client-message">
+  <div class="left-block"></div>
+  <div class="msg-right">
+    <div #msg>
 
+    </div>
+    <div class="msg-status" [ngSwitch]="message.status">
+      <div *ngSwitchCase="0" class="svg">
+        <img src="assets/sending.svg" style="width: 20px;height: 12px"/>
+      </div>
+      <div *ngSwitchCase="1" class="svg">
+        <img src="assets/delivered.svg" style="width: 20px;height: 12px"/>
+      </div>
+      <div *ngSwitchCase="1" class="svg">
+        <img src="assets/received.svg" style="width: 20px;height: 12px"/>
+      </div>
+      <span>{{timeStatus}} {{message.time | date: 'shortTime'}}</span>
+    </div>
   </div>
 </div>
