стили для скролов

--- a/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
+++ b/front/ChatBot/src/app/chat-editor/chat-editor.component.sass
@@ -7,6 +7,16 @@
   max-height: 100px
   overflow-y: auto
 
+.chat-editor::-webkit-scrollbar
+  width: 6px
+
+.chat-editor::-webkit-scrollbar-track
+  background-color: transparent
+
+.chat-editor::-webkit-scrollbar-thumb
+  background-color: #D3D6DE
+  border-radius: 3px
+
 .editor
   height: 100%
   max-height: 100px
