--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -1,10 +1,20 @@
 .msg-content
   width: 100%
   height: 100%
-  max-height: 428px
+  max-height: 78%
   overflow-y: auto
   scroll-behavior: smooth
   background-color: #F7F8FA
+
+.msg-content::-webkit-scrollbar
+  width: 6px
+
+.msg-content::-webkit-scrollbar-track
+  background-color: transparent
+
+.msg-content::-webkit-scrollbar-thumb
+  background-color: #D3D6DE
+  border-radius: 3px
 
 .curtain
   position: absolute
