--- a/front/ChatBot/src/app/msg-container/msg-container.component.html
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.html
@@ -2,7 +2,10 @@
   <div class="chatbot">
     <chat-header></chat-header>
     <msg-content>
-        <client-message *ngFor="let msg of messages; index as pId" [message]="msg"></client-message>
+      <div *ngFor="let msg of messages; index as pId" [ngSwitch]="msg.owner">
+        <client-message [message]="msg" *ngSwitchCase="0"></client-message>
+        <operator-message [message]="msg" *ngSwitchCase="1"></operator-message>
+      </div>
     </msg-content>
     <chat-editor></chat-editor>
   </div>
