Настройка формы выбора вопрос-ответов

--- a/front/ChatBot/src/app/chat-header/chat-header.component.html
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.html
@@ -1,7 +1,7 @@
-<div class="chat-header">
+<base-chat-header>
   <div class="company">АО РЭС</div>
   <div class="operators">
     Операторы в сети
     <span class="circle"></span>
   </div>
-</div>
+</base-chat-header>
