--- a/front/ChatBot/src/app/msg-container/msg-container.component.html
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.html
@@ -1,12 +1,7 @@
 <div [@openClose]="opened ? 'open' : 'closed'" class="parent-chatbot">
   <div class="chatbot">
-    <chat-header></chat-header>
-    <msg-content>
-      <div *ngFor="let msg of messages; index as pId" [ngSwitch]="msg.owner">
-        <client-message [message]="msg" *ngSwitchCase="0"></client-message>
-        <operator-message [message]="msg" *ngSwitchCase="1"></operator-message>
-      </div>
-    </msg-content>
+    <questions></questions>
+<!--    <chat-dialog></chat-dialog>-->
     <chat-editor></chat-editor>
   </div>
 </div>
