--- a/front/ChatBot/src/app/msg-container/msg-container.component.html
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.html
@@ -1,6 +1,7 @@
 <div [@openClose]="opened ? 'open' : 'closed'" class="parent-chatbot">
   <div class="chatbot">
-    <questions></questions>
+    <page-dispatcher></page-dispatcher>
+<!--    <questions></questions>-->
 <!--    <chat-dialog></chat-dialog>-->
     <chat-editor></chat-editor>
   </div>
