--- a/front/ChatBot/src/app/questions/questions/questions.component.html
+++ b/front/ChatBot/src/app/questions/questions/questions.component.html
@@ -1,4 +1,4 @@
-<questions-header [responsePreset]="responsePresent"></questions-header>
+<questions-header [responsePreset]="responsePresent" (close)="closePage()"></questions-header>
 <div class="questions-container" *ngIf="!responsePresent">
   <div *ngFor="let question of questions | async" class="question-container">
     <div>
