Настройка Chatbot.Hosting

--- a/front/ChatBot/src/app/dialog/chat-dialog.component.html
+++ b/front/ChatBot/src/app/dialog/chat-dialog.component.html
@@ -6,5 +6,6 @@
       <operator-message [message]="msg" *ngSwitchCase="1"></operator-message>
     </div>
   </msg-content>
+  <chat-editor></chat-editor>
 </div>
 
