--- a/front/ChatBot/src/app/msg-content/msg-content.component.sass
+++ b/front/ChatBot/src/app/msg-content/msg-content.component.sass
@@ -1,7 +1,7 @@
 .msg-content
   width: 100%
   height: 100%
-  max-height: 78%
+  max-height: 379px
   overflow-y: auto
   scroll-behavior: smooth
   background-color: #F7F8FA
