--- a/lk/src/app/main/main.component.sass
+++ b/lk/src/app/main/main.component.sass
@@ -15,3 +15,34 @@
 .example-spacer
   flex: 1 1 auto
 
+.action-bar
+  display: flex
+  justify-content: space-between
+  width: 100%
+
+.ao-res-logo
+  width: 65px
+  height: 105px
+  margin-left: calc(50% - 36px)
+  margin-top: 32px
+
+.main-menu
+  margin-top: 100px
+
+.nav-list-item
+  display: flex
+
+.side-nav-menu-caption
+  text-transform: uppercase
+
+.list-button
+  margin-left: 50px
+
+.arrow-container
+  position: absolute
+  width: 90%
+  text-align: right
+
+.res-menu-active-icon
+  width: 14px
+  height: 14px
