--- a/lk/src/app/dialogs/dialogs.component.html
+++ b/lk/src/app/dialogs/dialogs.component.html
@@ -17,7 +17,7 @@
                     <button mat-button>Отклонить</button>
                 </div>
                 <div class="dialog-close">
-                    <button mat-button (click)="openChat()">Открыть</button>
+                    <button mat-button (click)="openChat(dialog)">Открыть</button>
                 </div>
             </div>
         </div>
