--- a/lk/src/app/client-chat-dialog/client-chat-dialog.component.html
+++ b/lk/src/app/client-chat-dialog/client-chat-dialog.component.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-    <h1 mat-dialog-title>{{firstMessage.sender}}</h1>
+    <h1 mat-dialog-title>{{senderName | async}}</h1>
     </div>
     <div class="chat">
         <div class="chat-message">
