--- a/front/ChatBot/src/app/questions/questions-header/questions-header.component.sass
+++ b/front/ChatBot/src/app/questions/questions-header/questions-header.component.sass
@@ -4,6 +4,7 @@
   background-color: transparent
   border-radius: 3px
   border: 1px solid transparent
+  cursor: pointer
 
 .header-container
   display: flex
