--- a/front/ChatBot/src/app/msg-container/msg-container.component.html
+++ b/front/ChatBot/src/app/msg-container/msg-container.component.html
@@ -1,6 +1,7 @@
 <div [@openClose]="opened ? 'open' : 'closed'" class="parent-chatbot">
   <div class="chatbot">
     <page-dispatcher></page-dispatcher>
+    <chat-editor></chat-editor>
   </div>
 </div>
 <!--(domChange)="onDomChange($event, msg)"-->
