Платформа dotnet для lk

--- a/lk/src/app/dialogs/dialogs.component.html
+++ b/lk/src/app/dialogs/dialogs.component.html
@@ -8,7 +8,7 @@
             <a mat-tab-link [routerLink]="['dialogs/8']" [active]="activeLink == linkType.closed" (click)="goTo(linkType.closed)">Закрытые</a>
         </div>
         <div>
-            Additional info
+<!--            Additional info-->
         </div>
     </div>
 </nav>
