--- a/lk/src/app/questions/questions-page/questions-page.component.html
+++ b/lk/src/app/questions/questions-page/questions-page.component.html
@@ -3,7 +3,10 @@
     <div class="action-bar">
         <div></div>
         <div>
-            <button mat-button class="add-question-btn" (click)="openEditQuestionDialog(undefined)">Добавить вопрос/ответ</button>
+            <button mat-button class="add-question-btn" (click)="openEditQuestionDialog(undefined)">
+                <mat-icon>add</mat-icon>
+                Добавить вопрос/ответ
+            </button>
         </div>
     </div>
 </nav>
