--- a/front/ChatBot/src/app/chat-header/chat-header.component.sass
+++ b/front/ChatBot/src/app/chat-header/chat-header.component.sass
@@ -10,7 +10,7 @@
 
 .operators
   position: absolute
-  right: 30px
+  right: 16px
   padding-top: 23px
   color: #6EB443
   @include common.font-roboto(15px, 28px)
@@ -24,3 +24,25 @@
   height: 7px
   top: 34px
   right: -12px
+
+.header-element
+  position: absolute
+  top: 0
+  color: white
+  cursor: pointer
+  padding:
+    left: 1em
+    top: 1.6em
+
+.close-icon
+  width: 20px
+  margin-right: 0.1em
+
+.close-icon:hover
+  width: 22px
+
+.cross
+  left: -40px
+
+.question
+  left: -70px
