--- a/front/ChatBot/src/app/operator-message/operator-message.component.html
+++ b/front/ChatBot/src/app/operator-message/operator-message.component.html
@@ -2,7 +2,7 @@
   <div class="msg-left">
     <div #msg></div>
     <div class="msg-status">
-      <span>{{timeStatus}} {{message.time | date: 'shortTime'}}</span>
+      <span>{{message.time | chatDate}}</span>
     </div>
   </div>
   <div class="right-block"></div>
