--- a/lk/src/app/main/main.component.html
+++ b/lk/src/app/main/main.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class="main-menu">
             <mat-nav-list>
-                <mat-list-item style="text-align: center" (click)="goto('dialogs')">
+                <mat-list-item style="text-align: center" (click)="goto('/dialogs/27')">
                     <button mat-icon-button class="list-button">
                         <mat-icon svgIcon="res-chat"></mat-icon>&nbsp;&nbsp;
                         <span class="side-nav-menu-caption">Диалоги</span>
